--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
       <meta name="description" content="查给分">
       <meta name="author" content="匿名">
-    <title>Vite + Vue + TS</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+      <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
